fixtures/python/test-double/should_fail/stub_handler.py
def stub_response():
    return {"data": "stubbed"}

stub_result = stub_response()
